# camgrab

./: .dockerignore  Dockerfile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
camgrab/: __main__.py  config.py  grabber.py  publisher.py
tests/: test_config.py  test_grabber.py
