[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "camgrab"
version = "0.1.0"
description = "Grab and annotate RTSP camera snapshots"
requires-python = ">=3.11"
dependencies = ["tzdata"]

[project.scripts]
camgrab = "camgrab.__main__:main"

[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.21",
    "mypy>=2.2.0",
    "black>=26.5.1",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
